--- a/source/styles/blocks/filter.scss
+++ b/source/styles/blocks/filter.scss
@@ -57,6 +57,6 @@
     grid-column: auto;
     grid-template-columns: 149px 149px;
     justify-content: start;
-    gap: 18px;
+    gap: 20px;
   }
 }
